# startup-items-manager

./: .gitignore  AddEntryDialog.cs  CMakeLists.txt  MainForm.Designer.cs  MainForm.cs  PathResolver.cs  Program.cs  README.md  StartClean.csproj  StartClean.sln  StartupEntry.cs  StartupProviders.cs
res/: resources.rc
src/: main.cpp
